test/tests/stages/18_structures/invalid_parse/struct_member_name_kw.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  struct
  identifier(s)
  {
  int
  return
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
